--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,10 +3,22 @@ name: Hello, World
 on: workflow_dispatch
 
 jobs:
-  hello:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello Step
+      - name: Build Step
+        run: echo 'Build started...'
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Testing suite
+        run: echo 'running test cases...'
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy process
         run: |
-          echo "Hello, World!"
-          echo "trynna learn ci/cd"
+          echo 'Tests passed'
+          echo 'Running deploy process'
