--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,13 +1,15 @@
 name: Hello, World
 
-on: push
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Build Step
-        run: echo 'Build started...'
+        run: |
+          echo 'Hello, ${{ vars.name }}'
+          echo 'Build started...'
 
   tests:
     runs-on: ubuntu-latest
