--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,23 +6,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Step
-        run: |
-          echo 'Hello, ${{ vars.name }}'
-          echo 'Build started...'
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Read main.py
+        run: cat main.py
 
-  tests:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Testing suite
-        run: echo 'running test cases...'
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Deploy process
-        run: |
-          echo 'Tests passed'
-          echo 'Running deploy process'
